@@ -1,10 +1,10 @@
 package com.example;
 
 import java.io.InputStream;
-import java.net.URI;
+import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.List;
+import java.util.HashMap;
 import java.util.Map;
 
 import org.springframework.http.HttpStatus;
@@ -34,35 +34,24 @@ public class MessagingController {
                 return ResponseEntity.status(HttpStatus.BAD_REQUEST)
                         .body(Map.of("error", "Only image files are accepted"));
 
-            List<Map<String, Object>> processed = FileProcessor.uploadAndProcessFiles(
-                    new MultipartFile[] { file },
-                    null);
+            ImagePipeline.Result result = ImagePipeline.processImage(file);
 
-            if (processed.isEmpty()) {
+            if (!result.isSuccess())
                 return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
                         .body(Map.of("error", "Pipeline processing failed",
-                                "details", "No output from file processor"));
-            }
+                                "details", result.error.getMessage()));
 
-            Map<String, Object> fileInfo = processed.get(0);
-            if (fileInfo.containsKey("error")) {
-                return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                        .body(Map.of("error", "Pipeline processing failed",
-                                "details", String.valueOf(fileInfo.get("error"))));
-            }
-
-            String filename = String.valueOf(fileInfo.getOrDefault("filename", fileInfo.get("originalName")));
-            String sha256 = String.valueOf(fileInfo.getOrDefault("sha256", "unknown"));
-            String cloudUri = String.valueOf(fileInfo.getOrDefault("cloudUri", "unknown"));
-
-            String message = "Image processed: " + filename +
-                    " | Hash: " + sha256 +
-                    " | Stored at: " + cloudUri;
+            String message = "Image processed: " + result.meta.filename +
+                    " | Hash: " + result.meta.sha256 +
+                    " | Saved to: " + result.filePath;
             Messenger.sendReply(phoneNumber, message);
 
-            Map<String, Object> response = Map.of(
-                    "status", "success",
-                    "file", fileInfo);
+            Map<String, Object> response = new HashMap<>();
+            response.put("status", "success");
+            response.put("metadata", Map.of(
+                    "filename", result.meta.filename,
+                    "sha256", result.meta.sha256,
+                    "gps_flag", result.meta.gps_flag));
             return ResponseEntity.ok(response);
 
         } catch (Exception e) {
@@ -94,7 +83,7 @@ public class MessagingController {
             String ext = (mediaContentType != null && mediaContentType.contains("png")) ? ".png" : ".jpg";
             tempFile = Files.createTempFile("twilio-", ext);
 
-            try (InputStream in = URI.create(mediaUrl).toURL().openStream()) {
+            try (InputStream in = new URL(mediaUrl).openStream()) {
                 Files.copy(in, tempFile, java.nio.file.StandardCopyOption.REPLACE_EXISTING);
             }
 
